name:                tic-tac-toe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/volodyakavaler/tic-tac-toe#readme
license:             BSD3
license-file:        LICENSE
author:              vladimir krysanov
maintainer:          vkrysanov320@gmail.com
copyright:           Copyright (c) vladimir krysanov
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , gloss
  default-language:    Haskell2010

executable tic-tac-toe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gloss
                     , tic-tac-toe
  default-language:    Haskell2010

test-suite tic-tac-toe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tic-tac-toe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/volodyakavaler/tic-tac-toe
